fix vertical alignment in differing ui themes

--- a/styles/glow.less
+++ b/styles/glow.less
@@ -10,3 +10,9 @@
   height:10px;
   background-color: rgb(43, 236, 247);
 }
+
+.glow-inline-block {
+  display: inline-block;
+  align-items: middle;
+  vertical-align: middle;
+}
